# wl-api-crate

./: Cargo.toml  README.MD
src/: helpers.rs  lib.rs  models.rs  serde_deserializers.rs
tests/: helpers_test.rs  monitor_request_test.rs  traffic_info_list_request_test.rs
tests/assets/: monitor-response-empty.json  monitor-response.json  traffic-info-list.json
